--- a/templates/reports/analyze_user_sheet.html
+++ b/templates/reports/analyze_user_sheet.html
@@ -14,8 +14,7 @@ div#loading {
 
 {% block content %}
 <div class="right_col" role="main">
-  This demos a Google sheet integrations showing download, analysis, upload, and production of a Google slide deck of basic plots from the data set, facilitated by the <a href="https://pygsheets.readthedocs.io/en/stable/#" target="_blank"><i class="fa fa-star"></i>Pygsheets</a> library.
-
+  This demos a Google sheet integrations showing download, analysis, upload, and production of a Google slide deck of basic plots from the data set, facilitated by the <a href="https://pygsheets.readthedocs.io/en/stable/#" target="_blank"><i class="fa fa-star"></i>Pygsheets</a> library. If you would like to chuck some data at it, try your own with a few categorical features, or if you don't have something at the ready, you can copy over the data from the <a class="btn btn-xs btn-info" href="https://web.stanford.edu/~hastie/Papers/LARS/diabetes.data">Diabetes dataset</a>, which is the raw source for <a class="btn btn-info btn-xs" href="https://scikit-learn.org/stable/datasets/toy_dataset.html#diabetes-dataset">Scikit-learn's dataset</a>. I uploaded a part of this dataset for demostration purposes <a class="btn btn-info btn-xs" href="https://docs.google.com/spreadsheets/d/176y4bgAavZPHAuaQ4MR7RFDxdZEBztU7uKBAFiPPYWA/edit#gid=0">here</a>, please copy it over to something under your control and try out the instructions below!   
   <br>
   <h5>Instructions for use.</h5>
   <ul>
