integrates realsense capture with pubsub
- refines build command for resetting the usb connections each time a photo is requested
- writes out a cv2 colormap image from the camera
- presents signed url from storage filename to html

--- a/templates/pubsub/pubsub_demo.html
+++ b/templates/pubsub/pubsub_demo.html
@@ -2,11 +2,11 @@
 
 {% block content %}
 <div class="right_col" role="main">
-  This demos a Google Pub/Sub integration. 
+  This demos a Google Pub/Sub integration between web application and physical hardware. 
   <br>
   <h5>Instructions for use.</h5>
   <ul>
-    <li> TBD </li>
+    <li> Click the button below to trigger the remote photo. Shortly thereafter, the result of the image will be presented to this screen.  </li>
   </ul>
   <div class="row">
     {{form_html|safe}}
