setup-pubsub-realsense-frontend -- update html to trigger pubsub

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,7 +52,8 @@ Configuration with web dyno, worker dyno, and beat dyno. The Beat
         frontend</a> -->
       <a href="{{url_for('reports_bp.latex_demo')}}" class="btn btn-info btn-block">Generate an example LaTeX report</a>
       <a href="{{url_for('reports_bp.present_sheet')}}" class="btn btn-info btn-block">Interact with Google sheets</a>
-      <a href="{{url_for('reports_bp.analyze_user_sheet')}}" class="btn btn-info btn-block">Automatic data analysis</a>      
+      <a href="{{url_for('reports_bp.analyze_user_sheet')}}" class="btn btn-info btn-block">Automatic data analysis</a>
+      <a href="{{url_for('pubsub_bp.pubsub_depth_cam')}}" class="btn btn-info btn-block">Demo server to hardware communication</a>            
       <a href="/admin" class="btn btn-info btn-block">Admin panel (Proof of concept)</a>
 
       <a href="/pk" class="btn btn-info btn-block" target="_blank">Plotly Dash (Proof of concept)</a>
