setup-pubsub-realsense -- update front end to re-take photos

--- a/templates/pubsub/pubsub_results.html
+++ b/templates/pubsub/pubsub_results.html
@@ -9,6 +9,7 @@
   <ul>
     <li> Taken at {{time_of_photo}} </li>
     <li><a href="{{url}}" target="_blank">{{link}}</a> </li>
+    <li> <a href="{{ url_for('pubsub_bp.pubsub_depth_cam') }}" >Retake photo</a> </li>
   </ul>
   
   <div class="row">
