pubsub demo - explain the delay time

--- a/templates/pubsub/pubsub_results.html
+++ b/templates/pubsub/pubsub_results.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="right_col" role="main">
-  This demos a Google Pub/Sub integration - a camera is connected to a computer running the container (defined by docker-compose-intel.yml in this repository). The camera is attached to an oscillating fan so the image may change from time to time. <br>
+  This demos a Google Pub/Sub integration - a camera (Intel RealSense depth camera) is connected to a computer running the container (defined by docker-compose-intel.yml in this repository). The camera is pointing at a random location in my office. The demo takes about 10 seconds to complete, so please be patient! <br>
   The colorized depth map is shown here and a link to the photo in storage is below the image. 
   <br>
   <h5>Results. <h5>
