[add-soundcloud-link] add soundcloud link

--- a/templates/index.html
+++ b/templates/index.html
@@ -75,6 +75,10 @@ Configuration with web dyno, worker dyno, and beat dyno. The Beat
         <li>
           <a href="http://www.gaitanalyzer.info" target="_blank">Gait analysis project</a>
         </li>
+        <li>
+          <a href="https://soundcloud.com/elbow_rocket" target="_blank">Soundcloud page</a>
+        </li>
+        
 </ul>      
     <a href="{{url_for('main_bp.download_cv')}}" class="btn btn-info btn-block">Download resume</a>
     
