Add diagram of hardware communication

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,10 +13,21 @@
       levels, and from backend to frontend. I put together for this site for a collection of proof of concept/starter
       work. The app demonstrates a few backend resources/combinations typical of SaaS apps. See my resume and LinkedIn pages for a more extensive education and research history, with several years developing parallel simulation codes for scientific computing. 
     </p>
+  </div>
+  <div class="row">
+    <div class="col-xs-6">
+<!--      <h4>Mechanics</h4>-->
+      <a href="{{ url_for('main_bp.mechanics') }}" class="btn btn-primary btn-lg btn-block">Mechanics</a>
+    </div>
+    <div class="col-xs-6">
+      <h4>Machine learning prototype</h4>
+      </div>
+  </div>
 
+  <div class="row">
 <br>
     <div class="col-12">
-<h4>Demos</h4>
+<h4>Web app demos</h4>
 <!-- <a href="{{url_for('main_bp.index_gentelella')}}" class="btn btn-info btn-block">Flask-Gentelella 
      frontend</a> -->
 <a href="{{url_for('pubsub_bp.pubsub_depth_cam')}}" class="btn btn-info btn-block">Cloud to local hardware communication</a>
