--- a/static/build-gentelella/css/custom.css
+++ b/static/build-gentelella/css/custom.css
@@ -4253,3 +4253,31 @@ table thead .checkbox.radio { margin-top:-7px;margin-top:-21px; }
     background-color: #ffff !important;
 }
 /** /bootstrap-datetimepicker **/
+
+.responsive-iframe {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9 aspect ratio */
+    height: 0;
+    overflow: hidden;
+}
+
+.responsive-iframe iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
+
+/* Custom CSS */
+.custom-padding {
+    padding: 20px; /* or any other value */
+}
+
+/* Add this to your custom CSS file */
+.iframe-padding {
+    padding: 55px; /* Adjust the value to your preference */
+}
+
