--- a/templates/index.html
+++ b/templates/index.html
@@ -17,30 +17,16 @@
   <div class="row">
     <div class="col-xs-6">
 <!--      <h4>Mechanics</h4>-->
-      <a href="{{ url_for('main_bp.mechanics') }}" class="btn btn-primary btn-lg btn-block">Mechanics</a>
+      <a href="{{ url_for('main_bp.mechanics') }}" class="btn btn-primary btn-lg btn-block">Continuum mechanics work</a>
     </div>
     <div class="col-xs-6">
-      <h4>Machine learning prototype</h4>
+      <a href="{{ url_for('main_bp.webapps') }}" class="btn btn-primary btn-lg btn-block">Web app demos </a>
       </div>
   </div>
 
   <div class="row">
 <br>
     <div class="col-12">
-<h4>Web app demos</h4>
-<!-- <a href="{{url_for('main_bp.index_gentelella')}}" class="btn btn-info btn-block">Flask-Gentelella 
-     frontend</a> -->
-<a href="{{url_for('pubsub_bp.pubsub_depth_cam')}}" class="btn btn-info btn-block">Cloud to local hardware communication</a>
-<!--<a href="http://www.gaitanalyzer.info" target="_blank" class="btn btn-info btn-block">Gait analysis</a>-->
-<a href="http://www.movierank.org" target="_blank" class="btn btn-info btn-block">Figure out what movie to watch</a>
-      <a href="{{url_for('reports_bp.present_sheet')}}" class="btn btn-info btn-block">Spreadsheet power use</a>
-      <a href="{{url_for('reports_bp.analyze_user_sheet')}}" class="btn btn-info btn-block">Automatic data analysis</a>
-      <a href="/admin" class="btn btn-info btn-block">Admin panel/data management</a>
-      <a href="/pk" class="btn btn-info btn-block" target="_blank">Dashboards</a>
-      <a href="{{url_for('reports_bp.latex_demo')}}" class="btn btn-info btn-block">Automatic report generation</a>
-      <a href="https://soundcloud.com/elbow_rocket" class="btn btn-info btn-block"target="_blank">Some music I made</a>
-          <a href="{{urls.main.google_scholar}}" target="_blank" class="btn btn-info btn-block">Google Scholar publications</a>      
-    </div>
 
     <h4> Other links </h4>
     <ul>
