--- a/templates/site_template/footer.html
+++ b/templates/site_template/footer.html
@@ -1,4 +1,4 @@
 <div class="pull-right">
-  <a href="https://colorlib.com/wp/free-bootstrap-admin-dashboard-templates/"></a>
+<!--  <a href="https://colorlib.com/wp/free-bootstrap-admin-dashboard-templates/"></a>-->
 </div>
-<div class="clearfix"></div>
+<!--<div class="clearfix"></div>-->
