--- a/static/build-gentelella/css/custom.css
+++ b/static/build-gentelella/css/custom.css
@@ -4253,14 +4253,28 @@ table thead .checkbox.radio { margin-top:-7px;margin-top:-21px; }
     background-color: #ffff !important;
 }
 /** /bootstrap-datetimepicker **/
-
-.responsive-iframe {
+.iframe-container {
     position: relative;
-    padding-bottom: 56.25%; /* 16:9 aspect ratio */
-    height: 0;
-    overflow: hidden;
+    width: 100%;
+    padding-top: 56.25%
+	   
 }
-
+.responsive-iframe2 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%
+	   /*    position: relative;
+	       padding-bottom: 56.25%;*/ /* 16:9 aspect ratio */
+/*	       height: 0;
+    overflow: hidden;*/
+}
+.responsive-iframe {
+    width: 100%;
+    height: auto; /* Or set a specific height, or use padding-top for aspect ratio */
+}
+/*
 .responsive-iframe iframe {
     position: absolute;
     top: 0;
@@ -4269,7 +4283,7 @@ table thead .checkbox.radio { margin-top:-7px;margin-top:-21px; }
     height: 100%;
     border: 0;
 }
-
+*/
 
 /* Custom CSS */
 .custom-padding {
@@ -4278,6 +4292,6 @@ table thead .checkbox.radio { margin-top:-7px;margin-top:-21px; }
 
 /* Add this to your custom CSS file */
 .iframe-padding {
-    padding: 55px; /* Adjust the value to your preference */
+    padding: 10px; /* Adjust the value to your preference */
 }
 
