--- a/templates/index.html
+++ b/templates/index.html
@@ -4,18 +4,22 @@
 <div class="right_col" role="main">
       Welcome! I am an experienced generalist programmer and engineer, who loves integrating across software/hardware
       levels, and from backend to frontend. I put together for this site for a collection of proof of concept/starter
-      work. The app demonstrates a few backend resources/combinations typical of SaaS apps. See my LinkedIn page for a more extensive education and research history, including several years developing parallel simulation codes for scientific computing. 
+      work as well as past contributions. See my LinkedIn page for a more extensive education and research history, including several years developing parallel simulation codes for scientific computing. 
       <br>
-  <div class="row">
-    <div class="col-xs-6">
-<!--      <h4>Mechanics</h4>-->
-      <a href="{{ url_for('main_bp.mechanics') }}" class="btn btn-primary btn-lg btn-block">Continuum mechanics work</a>
-    </div>
-    <div class="col-xs-6">
-      <a href="{{ url_for('main_bp.webapps') }}" class="btn btn-primary btn-lg btn-block">Web app demos </a>
+      <div class="row">
+	<div class="col-xs-6">
+	  <!--      <h4>Mechanics</h4>-->
+	  <div class="row">
+	    <a href="{{ url_for('main_bp.mechanics') }}" class="btn btn-primary btn-lg btn-block">Physics work</a>
+	  </div>
+	  <div class="row">
+	    <a href="{{ url_for('main_bp.webapps') }}" class="btn btn-primary btn-lg btn-block">Web app demos </a>
+	  </div>
+	  <div class="row">
+	    <a href="{{url_for('main_bp.machine_learning') }}" class="btn btn-primary btn-lg btn-block">Machine learning</a>
+	  </div>
+	</div>
       </div>
-  </div>
-
 
   <div class="row">
 <br>
