Add data engineering section

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,10 @@
 	  <div class="row">
 	    <a href="{{url_for('main_bp.machine_learning') }}" class="btn btn-primary btn-lg btn-block">Machine learning</a>
 	  </div>
+	  <div class="row">
+	    <a href="{{url_for('main_bp.data_engineering') }}" class="btn btn-primary btn-lg btn-block">Data engineering</a>
+	  </div>
+	  
 	</div>
       </div>
 
