--- a/templates/site_template/sidebar.html
+++ b/templates/site_template/sidebar.html
@@ -44,8 +44,10 @@
       <ul class="nav side-menu">
       <li><a><i class="fa fa-gears"></i> Demos on this app<span class="fa fa-chevron-down"></span></a>
         <ul class="nav child_menu">
-	  <li><a href="{{url_for('main_bp.mechanics')}}" target="_blank">Continuum mechanics work</a></li>	  
-	  <li><a href="{{url_for('main_bp.webapps')}}" target="_blank">Web application bits and bobs</a></li>
+	  <li><a href="{{url_for('main_bp.mechanics')}}" >Continuum mechanics work</a></li>	  
+	  <li><a href="{{url_for('main_bp.webapps')}}">Web application bits and bobs</a></li>
+	  <li><a href="{{url_for('main_bp.machine_learning')}}" >Machine learning</a></li>
+	  <li><a href="{{url_for('main_bp.data_engineering')}}" >Data engineering</a></li>	  
           <!--<li><a href="{{url_for('reports_bp.latex_demo')}}" target="_blank">Generate an example LaTeX report</a></li>-->
 	  
           <!--<li><a href="{{url_for('reports_bp.present_sheet')}}" target="_blank">Interact with Google sheets</a></li>            -->
