--- a/templates/cloud_definition.html
+++ b/templates/cloud_definition.html
@@ -2,12 +2,11 @@
 
 {% block content %}
 <div class="right_col" role="main">
-  ABC
   <br>
   <div class="row">
     <div class="col-xs-4">
-      Cloud def: 
-      {{cloud_def}}
+      Cloud definition: 
+      <pre>{{cloud_def}}</pre>
     </div>
     <div class="col-xs-4">
       Data def:
