--- a/templates/site_template/sidebar.html
+++ b/templates/site_template/sidebar.html
@@ -86,7 +86,7 @@
     </div>
 
 
-    <div class="menu_section">
+<!--    <div class="menu_section">
       <h3>Projects</h3>
       <ul class="nav side-menu">
         <li><a><i class="fa fa-sitemap"></i> Computer vision <span class="fa fa-chevron-down"></span></a>
@@ -94,7 +94,8 @@
             <li><a href="http://www.gaitanalyzer.info" target="_blank">Gait analysis POC, from 2017</a>
               </li>
           </ul>
-        </li>
+        </li> -->
+	
 <!--        <li><a><i class="fa fa-sitemap"></i> Hobbies <span class="fa fa-chevron-down"></span></a>
           <ul class="nav child_menu">
               <li><a href="#level1_1">Music</a>
@@ -112,8 +113,8 @@
               </li>
           </ul>
         </li> -->
-      </ul>
-    </div>
+<!--      </ul>
+    </div>-->
   </div>
   <!-- /sidebar menu -->
 
