--- a/static/build-gentelella/css/custom.css
+++ b/static/build-gentelella/css/custom.css
@@ -4295,3 +4295,30 @@ table thead .checkbox.radio { margin-top:-7px;margin-top:-21px; }
     padding: 10px; /* Adjust the value to your preference */
 }
 
+
+.loader {
+  display: none;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+}
+
+.xloading {
+  border: 2px solid #ccc;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  border-top-color: #1ecd97;
+  border-left-color:  #1ecd97;
+  animation: spin 1s infinite ease-in;
+}
+
+@keyframes spin {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+}
