Add testable id tag to results page

--- a/templates/pubsub/pubsub_results.html
+++ b/templates/pubsub/pubsub_results.html
@@ -5,6 +5,7 @@
   This demos a Google Pub/Sub integration - a camera (Intel RealSense depth camera) is connected to a computer running the container (defined by docker-compose-intel.yml in this repository). The camera is pointing at a random location in my office. The demo takes about 10 seconds to complete, so please be patient! <br>
   The colorized depth map is shown here and a link to the photo in storage is below the image. 
   <br>
+  <div id="successful-run"></div>
   <h5>Results. <h5>
   <ul>
     <li> Taken at {{time_of_photo}} </li>
