Revert rm pubsub demo

--- a/templates/index_webapps.html
+++ b/templates/index_webapps.html
@@ -9,10 +9,10 @@
     <div class="col-xs-12">
   <table class="table">
     <tr>
-<!--      <td class="align-middle text-center">
+      <td class="align-middle text-center">
 <a href="{{url_for('pubsub_bp.pubsub_depth_cam')}}" class="btn btn-info btn-block">Cloud to local hardware communication</a>	
       This demonstrates a simple way to turn any local hardware device (e.g. lab measurement system) into a cloud connected device. 
-      </td> -->
+      </td>
       <td class="align-middle text-center">
 <a href="http://www.movierank.org" target="_blank" class="btn btn-info btn-block">Figure out what movie to watch</a>	
       This is a separate application where I cross reference a couple review sites to solve the problem of "what movie can I watch for free tonight". Separately I'm a home theater enthusiast boasting an 18 inch DIY subwoofer.
