--- a/templates/pubsub/pubsub_results.html
+++ b/templates/pubsub/pubsub_results.html
@@ -10,6 +10,9 @@
   <ul>
     <li> Taken at {{time_of_photo}} </li>
     <li><a href="{{url}}" target="_blank">{{link}}</a> </li>
+    {% if url_data %}
+    <li><a href="{{url_data}}" target="_blank">{{link_data}}</a> </li>
+    {% endif %}
     <li> <a href="{{ url_for('pubsub_bp.pubsub_depth_cam') }}" >Retake photo</a> </li>
   </ul>
   
@@ -21,5 +24,10 @@
       </figcaption>
     </figure>
   </div>
+
+  <div class="row">
+    <div id="plotly-chart">{{ fig_html|safe}} </div>
+  </div>
+  
 </div>
 {% endblock %}
