--- a/templates/pubsub/pubsub_results.html
+++ b/templates/pubsub/pubsub_results.html
@@ -26,8 +26,11 @@
   </div>
 
   <div class="row">
-    <div id="plotly-chart">{{ fig_html|safe}} </div>
+    <!-- <div id="plotly-chart">{ fig_html|safe} </div> -->
+    <iframe id="plotly-chart" src="{{ url_for('static', filename='figures/figure.html') }}" 
+          width="100%" height="600px" frameborder="0"></iframe>
   </div>
+
   
 </div>
 {% endblock %}
